# tree-sitter-ascript

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: build.rs  lib.rs
queries/: brackets.scm  folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c
