[package]
name = "tree-sitter-ascript"
description = "AScript grammar for tree-sitter"
version = "0.1.0"
authors = ["AScript"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "ascript"]
categories = ["parser-implementations", "text-editors"]
repository = "https://github.com/ascript-lang/tree-sitter-ascript"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "README.md", "LICENSE"]

# Standalone crate: NOT a member of the ascript repo workspace.
[workspace]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.0"
